--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -1101,4 +1101,166 @@ schemes:
       white:   '#928374'
     # indexed_colors: []
 
-colors: *blood_moon
+  Hyper: &hyper
+   # Default colors
+    primary:
+      background: '#000000'
+      foreground: '#ffffff'
+    cursor:
+      text: '#F81CE5'
+      cursor: '#ffffff'
+
+    # Normal colors
+    normal:
+      black:   '#000000'
+      red:     '#fe0100'
+      green:   '#33ff00'
+      yellow:  '#feff00'
+      blue:    '#0066ff'
+      magenta: '#cc00ff'
+      cyan:    '#00ffff'
+      white:   '#d0d0d0'
+
+    # Bright colors
+    bright:
+      black:   '#808080'
+      red:     '#fe0100'
+      green:   '#33ff00'
+      yellow:  '#feff00'
+      blue:    '#0066ff'
+      magenta: '#cc00ff'
+      cyan:    '#00ffff'
+      white:   '#FFFFFF'
+
+  Iceberg: &iceberg
+    # Default colors
+    primary:
+      background: '#161821'
+      foreground: '#d2d4de'
+
+    # Normal colors
+    normal:
+      black:   '#161821'
+      red:     '#e27878'
+      green:   '#b4be82'
+      yellow:  '#e2a478'
+      blue:    '#84a0c6'
+      magenta: '#a093c7'
+      cyan:    '#89b8c2'
+      white:   '#c6c8d1'
+
+    # Bright colors
+    bright:
+      black:   '#6b7089'
+      red:     '#e98989'
+      green:   '#c0ca8e'
+      yellow:  '#e9b189'
+      blue:    '#91acd1'
+      magenta: '#ada0d3'
+      cyan:    '#95c4ce'
+      white:   '#d2d4de'
+
+  Monokai_Pro: &monokai_pro
+    # Default colors
+    primary:
+      background: '#2D2A2E'
+      foreground: '#FCFCFA'
+
+    # Normal colors
+    normal:
+      black:   '#403E41'
+      red:     '#FF6188'
+      green:   '#A9DC76'
+      yellow:  '#FFD866'
+      blue:    '#FC9867'
+      magenta: '#AB9DF2'
+      cyan:    '#78DCE8'
+      white:   '#FCFCFA'
+
+    # Bright colors
+    bright:
+      black:   '#727072'
+      red:     '#FF6188'
+      green:   '#A9DC76'
+      yellow:  '#FFD866'
+      blue:    '#FC9867'
+      magenta: '#AB9DF2'
+      cyan:    '#78DCE8'
+      white:   '#FCFCFA'
+
+  Nightfly: &nightfly
+    # Default colors
+    primary:
+      background:        '#011627'
+      foreground:        '#acb4c2'
+      bright_foreground: '#eeeeee'
+
+    # Cursor colors
+    cursor:
+      text:   '#080808'
+      cursor: '#9ca1aa'
+
+    # Selection colors
+    selection:
+      text:       '#080808'
+      background: '#b2ceee'
+
+    # Normal colors
+    normal:
+      black:   '#1d3b53'
+      red:     '#fc514e'
+      green:   '#a1cd5e'
+      yellow:  '#e3d18a'
+      blue:    '#82aaff'
+      magenta: '#c792ea'
+      cyan:    '#7fdbca'
+      white:   '#a1aab8'
+
+    # Bright colors
+    bright:
+      black:   '#7c8f8f'
+      red:     '#ff5874'
+      green:   '#21c7a8'
+      yellow:  '#ecc48d'
+      blue:    '#82aaff'
+      magenta: '#ae81ff'
+      cyan:    '#7fdbca'
+      white:   '#d6deeb'
+
+  Night_Owl: &night_owl
+    # Default colors
+    primary:
+      background: '#011627'
+      foreground: '#d6deeb'
+
+    cursor:
+      text: '#011627'
+      cursor: '#d6deeb'
+
+    selection:
+      background: '#1b90dd'
+
+    # Normal colors
+    normal:
+      black:   '#011627'
+      red:     '#ef5350'
+      green:   '#22da6e'
+      yellow:  '#c5e478'
+      blue:    '#82aaff'
+      magenta: '#c792ea'
+      cyan:    '#21c7a8'
+      white:   '#ffffff'
+
+    # Bright colors
+    bright:
+      black:   '#575656'
+      red:     '#ef5350'
+      green:   '#22da6e'
+      yellow:  '#ffeb95'
+      blue:    '#82aaff'
+      magenta: '#c792ea'
+      cyan:    '#7fdbca'
+      white:   '#ffffff'
+
+#top picks: blood_moon, hyper, night_owl
+colors: *night_owl
