Update window size of kitty

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -608,7 +608,9 @@ font_family        JetBrains Mono Nerd Font
 #: Window layout {{{
 
 remember_window_size  no
-initial_window_width  100c
+#initial_window_width  850
+#initial_window_height 680
+initial_window_width  94c
 initial_window_height 38c
 
 #: If enabled, the window size will be remembered so that new
